# server.js
@@ -1,14 +1,15 @@
 import express from "express";
 import db from "./db/database.js";
-import studentsRoutes from "./routes/estudiantes.js";
 import swaggerUi from "swagger-ui-express";
 import YAML from "yamljs";
+import pacientesRoutes from "./routes/pacientes.js";
 
 const app = express();
 const PORT = process.env.PORT || 3000;
 
 // Parse JSON request bodies
 app.use(express.json());
+app.use("/pacientes", pacientesRoutes);
 
 // Load Swagger YAML
 const swaggerDocument = YAML.load("./swagger.yaml");
@@ -18,13 +19,6 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Test route
 app.get("/", (req, res) => res.send("API running"));
-
-// Register student routes
-app.use("/estudiantes", studentsRoutes);
-
-// Debug: print all students on startup
-const students = db.prepare("SELECT * FROM estudiantes").all();
-console.log("All students in DB:", students);
 
 app.listen(PORT, () => {
   console.log(`Server listening at http://localhost:${PORT}`);
